# ESE615_final_team7

./: .gitignore  README.md  requirements.txt  reward_shaping_thoughts.md  setup.py
configs/: default.yaml  levine.yaml  multi_agent_self_play.yaml  multi_agent_vs_pp.yaml  sim2real_e2e.yaml  sim2real_fast.yaml  sim2real_localized.yaml
examples/: 1_simple_ppo.py  2_race_against_opponent.py  3_imitation_learning.py  4_race_fast.py  5_ppo_from_scratch.py  6_custom_reward.py  7_custom_observations.py  README.md
f1tenth_rl/: __init__.py
f1tenth_rl.egg-info/: PKG-INFO
f1tenth_rl/agents/: __init__.py  custom_ppo.py  imitation.py  networks.py  sb3_trainer.py
f1tenth_rl/envs/: __init__.py  domain_randomization.py  observations.py  rewards.py  self_play.py  wrapper.py
f1tenth_rl/experts/: __init__.py  demo_collector.py  pure_pursuit.py  raceline.py
f1tenth_rl/ros2/: __init__.py  inference_node.py
f1tenth_rl/utils/: __init__.py  callbacks.py  waypoints.py
maps/levine_blocked/: levine_blocked_centerline.csv
maps/levine_slam/: levine_slam.pgm  levine_slam.yaml  levine_slam_centerline.csv
ros2_deploy/: package.xml  setup.py
ros2_deploy/f1tenth_rl_deploy/: __init__.py  rl_inference.py
ros2_deploy/launch/: rl_foxglove.launch.py
ros2_deploy/resource/: f1tenth_rl_deploy
runs/bc_ppo_curriculum_clearance_mid_levine_safe_2026-04-27_17-23-11/: config.yaml
scripts/: collect_demos.py  evaluate.py  export_model.py  pose_relay.py  prepare_deploy.py  record_video.py  run_ros2_foxglove.sh  test_pure_pursuit.py
videos/: demoVideos  demoVideos.md  presentation.md
(+437 files in other folders)
