<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_rl_deploy</name>
  <version>0.1.0</version>
  <description>ROS2 launch helpers for F1TENTH RL policy deployment and Foxglove visualization.</description>
  <maintainer email="team7@example.com">ESE615 Team 7</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
